--- a/text-sum-app/package.json
+++ b/text-sum-app/package.json
@@ -5,7 +5,10 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@mantine/core": "^6.0.7",
+    "@mantine/hooks": "^6.0.7",
     "@mui/material": "^5.12.0",
+    "@tabler/icons-react": "^2.16.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
